--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,21 @@
-{"name": "PitStop Pro v3", "short_name": "PitStop", "start_url": ".?v=full", "display": "standalone", "background_color": "#0b0d10", "theme_color": "#0b0d10", "icons": [{"src": "icon-192.png", "sizes": "192x192", "type": "image/png"}, {"src": "icon-512.png", "sizes": "512x512", "type": "image/png"}]}
+{
+  "name": "Driver App",
+  "short_name": "Driver",
+  "start_url": "./index.html",
+  "scope": "./",
+  "display": "standalone",
+  "background_color": "#1976D2",
+  "theme_color": "#1976D2",
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
