--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
   "name": "Driver App",
-  "short_name": "Driver",
-  "start_url": "./index.html",
-  "scope": "./",
+  "short_name": "DriverApp",
+  "start_url": ".",
   "display": "standalone",
-  "background_color": "#1976D2",
-  "theme_color": "#1976D2",
+  "background_color": "#ffffff",
+  "description": "Driver app with offline support",
   "icons": [
     {
       "src": "icon-192.png",
