--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,12 @@
 {
   "name": "Driver App",
   "short_name": "Driver",
-  "start_url": "./index.html",
-  "scope": "./",
+  "start_url": ".",
   "display": "standalone",
-  "background_color": "#1976D2",
-  "theme_color": "#1976D2",
+  "background_color": "#ffffff",
+  "description": "Driver tools offline",
   "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
